# stock-trader

./: Dockerfile  README.md  app.py  callback.md  chainlit.md  chatbot.py  pyproject.toml
docs/: aws-deploy-stock-trader-subdomain.md
main/: __init__.py  main.py
main/src/trader/: brave_news.py  email_sender.py  graph.py  state.py  stock_quote.py
main/src/trader/data/: companies.txt
