[project]
name = "stock-trader"
version = "0.1.0"
description = "A LangChain + LangGraph powered stock trading agent."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Abhinav Sarja" },
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "grandalf>=0.8",
]

[project.scripts]
stock-trader = "main.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]
